<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.root3r0x.testtwo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblTexto1"
        android:text="@string/view_text"
        android:textSize="25sp"
        android:textColor="#ce1d1d"
        android:textAlignment="center"
        android:fontFamily="@string/abc_capital_on" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash"
        android:id="@+id/btnSiguiente"
        android:layout_gravity="left|center"
        android:textColor="#2e860b"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_hint"
        android:id="@+id/btnHint"
        android:layout_gravity="left|center"
        android:textColor="#2e860b"
        android:layout_alignTop="@+id/btnSiguiente"
        android:layout_alignRight="@+id/lblTexto1"
        android:layout_alignEnd="@+id/lblTexto1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        android:id="@+id/btnToast"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonA"
        android:id="@+id/btnA"
        android:textSize="20sp"
        android:textColor="#fc1616"
        android:background="#ffffff"
        android:layout_above="@+id/btnSiguiente"
        android:layout_marginBottom="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btnSiguiente"
        android:layout_alignRight="@+id/btnToast"
        android:layout_alignEnd="@+id/btnToast" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonB"
        android:id="@+id/btnB"
        android:textSize="20sp"
        android:textColor="#fc1616"
        android:background="#ffffff"
        android:layout_alignTop="@+id/btnA"
        android:layout_alignRight="@+id/btnHint"
        android:layout_alignEnd="@+id/btnHint"
        android:layout_toEndOf="@+id/btnSiguiente"
        android:layout_alignLeft="@+id/btnHint"
        android:layout_alignStart="@+id/btnHint" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgViewImagen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btnA"
        android:layout_below="@+id/lblTexto1"
        android:src="@drawable/ic_launcher" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imgGaleria"
        android:id="@+id/bntImg"
        android:layout_below="@+id/imgViewImagen"
        android:layout_alignLeft="@+id/btnSiguiente"
        android:layout_alignStart="@+id/btnSiguiente"
        android:layout_alignRight="@+id/btnSiguiente"
        android:layout_alignEnd="@+id/btnSiguiente" />

</RelativeLayout>
